--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -216,6 +216,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalCompressionResistancePriority="1000" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" placeholder="What's happening?" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LE2-Ja-CE4">
+                                <rect key="frame" x="16" y="86" width="296" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="F3N-rz-6pQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <action selector="updateRemainingCharCount:" destination="m5s-XN-b7W" eventType="editingChanged" id="taR-3K-GKQ"/>
+                                </connections>
+                            </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bXT-Uz-58B">
                                 <rect key="frame" x="16" y="28" width="50" height="50"/>
                                 <constraints>
@@ -231,23 +242,38 @@
                                 </constraints>
                             </view>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gQc-HJ-uwu">
-                                <rect key="frame" x="0.0" y="514" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="182" width="320" height="44"/>
                                 <items>
-                                    <barButtonItem title="Item" id="jqQ-jZ-zEx"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="EDq-mb-ciE"/>
+                                    <barButtonItem title="Tweet" id="S73-4F-WxQ">
+                                        <connections>
+                                            <action selector="onTweet:" destination="m5s-XN-b7W" id="oL3-FX-8iL"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" borderStyle="roundedRect" placeholder="What's happening?" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LE2-Ja-CE4">
-                                <rect key="frame" x="16" y="86" width="288" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="140" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TyC-Aw-gIU">
+                                <rect key="frame" x="217" y="193" width="29" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NuZ-nr-RAK">
+                                <rect key="frame" x="258" y="20" width="48" height="30"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onCancel:" destination="m5s-XN-b7W" eventType="touchUpInside" id="C5h-p4-o8m"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="y9I-bZ-dXw" secondAttribute="trailing" constant="40" id="2L9-3J-tEs"/>
                             <constraint firstItem="LE2-Ja-CE4" firstAttribute="leading" secondItem="BYs-zR-4z1" secondAttribute="leading" constant="16" id="FQd-Bh-Gn5"/>
                             <constraint firstItem="k1Y-2L-Z8E" firstAttribute="top" secondItem="y9I-bZ-dXw" secondAttribute="bottom" id="Fyj-oW-dbv"/>
-                            <constraint firstAttribute="trailing" secondItem="LE2-Ja-CE4" secondAttribute="trailing" constant="16" id="H2M-So-gVe"/>
+                            <constraint firstAttribute="trailing" secondItem="LE2-Ja-CE4" secondAttribute="trailing" constant="8" id="H2M-So-gVe"/>
                             <constraint firstItem="y9I-bZ-dXw" firstAttribute="leading" secondItem="BYs-zR-4z1" secondAttribute="leadingMargin" constant="40" id="XUb-89-f8C"/>
                             <constraint firstItem="bXT-Uz-58B" firstAttribute="top" secondItem="zaO-iX-USd" secondAttribute="bottom" constant="8" id="gqF-z7-hgq"/>
                             <constraint firstItem="bXT-Uz-58B" firstAttribute="leading" secondItem="BYs-zR-4z1" secondAttribute="leading" constant="16" id="qrb-be-bgf"/>
@@ -257,6 +283,8 @@
                     <connections>
                         <outlet property="composeTextField" destination="LE2-Ja-CE4" id="ovs-NA-YCa"/>
                         <outlet property="profileImageView" destination="bXT-Uz-58B" id="7cG-in-f4R"/>
+                        <outlet property="remainingCharCountLabel" destination="TyC-Aw-gIU" id="63z-hP-YeF"/>
+                        <outlet property="tweetButtonItem" destination="S73-4F-WxQ" id="Lam-L4-EeO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N2c-qK-fmx" userLabel="First Responder" sceneMemberID="firstResponder"/>
